# FeedSentry

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  compose.yaml  config.example.yaml  pyproject.toml
docs/: architecture.md
docs/superpowers/plans/: 2026-07-11-feedsentry-mvp.md  2026-07-12-telegram-native-notifications.md  2026-07-15-ops-console.md  (+2 more)
src/feedsentry/: ai.py  api.py  app.py  config.py  control.py  database.py  domain.py  feed_validation.py  feeds.py  ingestion.py  logging.py  mcp.py  processor.py  qq.py  repository.py  rsshub.py  scheduler.py  serialize.py  telegram.py
tests/: conftest.py  test_ai.py  test_api.py  test_api_console.py  test_config.py  test_control.py  test_domain.py  test_end_to_end.py  test_feed_validation.py  test_feeds.py  test_ingestion.py  test_logging.py  test_mcp_transport.py  test_package.py  test_polling.py  test_processor.py  test_qq.py  test_repository.py  test_rsshub.py  test_scheduler.py  test_telegram.py
tests/clients/: test_ai.py  test_feed_http.py  test_feed_validation.py  test_feeds.py  test_integrations.py  test_qq.py  test_rsshub.py  test_telegram.py
tests/config/: test_models.py  test_store.py
tests/core/: test_domain.py  test_repository.py
tests/interfaces/: test_api.py  test_api_console.py  test_control.py  test_mcp_tools.py  test_mcp_transport.py
tests/pipeline/: test_ingestion.py  test_polling.py  test_processor.py  test_scheduler.py
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.ts  auth-context.ts  auth.tsx  format.ts  styles.css
(+38 files in other folders)
